# neovim-cobol

./: Cargo.toml  README.md  install.sh
plugin/: neovim-cobol.vim
src/: event.rs  main.rs  neovim_cobol_const.rs  texte_fd.rs  tpl.rs
src/event/: t_neo_vim.rs  t_texte_fd.rs  t_tpl.rs
