[package]
name = "neovim-cobol"
version = "0.1.0"
authors = ["Stéphane Bressani <stephane@bressani.dev>"]
edition = "2018"

[dependencies]
neovim-lib = "0.6.0"
simplelog = "^0.10.0"
log = { version = "0.4.*", features = ["std"] }
termcolor = { version = "1.1.*", optional = true }
chrono = "0.4.1"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
unicode-segmentation = "1.6.0"